[tool.poetry]
name = "file-transfer-measurment"
version = "0.1.0"
description = ""
authors = ["taiberium <akhmetovrustam1990@gmail.com>"]
readme = "README.md"
packages = [{include = "file_transfer_measurment"}]

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.1.0"
configparser = "^5.3.0"
scp = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
